[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pages/EntityMenu/entityFieldItemPropertyString.gd" type="Script" id=1]

[node name="Control" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 30 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 293.0
margin_right = 64.0
margin_bottom = 307.0
text = "Test text: "

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 68.0
margin_right = 936.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="applyToAllBtn" type="Button" parent="."]
margin_left = 940.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Apply to all"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 537.0
margin_right = 1024.0
margin_bottom = 70.0
window_title = " "
dialog_text = "Are you sure? This action will change this property to ALL objects in game"

[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="applyToAllBtn" to="." method="_on_applyToAllBtn_button_down"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
